[package]
name = "anthem"
version = "2.0.0-rc.1"
rust-version = "1.85.0"
edition = "2024"
authors = ["Zach Hansen <zachhansen@unomaha.edu>", "Tobias Stolzmann <tobias.stolzmann@gmail.com>"]
description = "A command-line application for assisting in the verification of answer set programs"
categories = ["command-line-utilities", "compilers", "mathematics"]
keywords = ["asp", "clingo", "logic", "proof-assistant"]
homepage = "https://potassco.org/anthem"
documentation = "https://docs.rs/anthem"
repository = "https://github.com/potassco/anthem"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "2", features = ["full"] }
either = "1"
indexmap = "2"
itertools = "0.14"
lazy_static = "1"
num_cpus = "1"
pest = "2"
pest_derive = "2"
petgraph = "0.8"
regex = "1"
thiserror = "2"
threadpool = "1"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
